--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@metamask/delegation-toolkit": "^0.10.2",
     "@tanstack/react-query": "^5.67.1",
+    "ethers": "^6.13.7",
     "next": "15.2.1",
     "permissionless": "^0.2.35",
     "react": "^19.0.0",
