--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dtk-nextjs-starter",
+  "name": "smart-accounts-kit-delegation-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
