--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dtk-nextjs-starter",
+  "name": "smart-accounts-kit-delegation-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@metamask/delegation-toolkit": "^0.12.0",
-    "@tanstack/react-query": "^5.76.1",
+    "@metamask/smart-accounts-kit": "^0.1.0",
+    "@tanstack/react-query": "^5.90.7",
     "next": "15.3.5",
-    "permissionless": "^0.2.46",
+    "permissionless": "^0.2.57",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "viem": "^2.29.2",
-    "wagmi": "^2.15.3"
+    "viem": "^2.38.6",
+    "wagmi": "^2.19.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
